Fixed some sizing/fit issues, still need to fix nav bar to have it aligned with 'this website..'. Lorem text and signature can be a little tighter too.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   min-height: 100vh;
   display: flex;
@@ -27,10 +33,11 @@ header {
   justify-content: center;
   background-color: #1f2937;
   font-family: Arial, Helvetica, sans-serif;
+  margin-top: 50px;
 }
 
 .logo {
-  margin-left: 10px;
+  margin-left: 70px;
 }
 
 .navbar > *:nth-child(1){
